<resources>
    <string name="app_name">Ornamenti</string>
    <string name="version">v1.0.0</string>
    <string name="kiegelis">Ķieģelis</string>
    <string name="ugunskrusts">Mazais ugunskrusts</string>
    <string name="mugunskrusts">Māras ugunskrunsts</string>
    <string name="l_ugunskrusts">Ugunskrusts</string>
    <string name="krusts">Krusts</string>
    <string name="zalktis">Zalktis 1</string>
    <string name="zalktis_2">Zalktis 2</string>
    <string name="jumis_koks">Jumis / Koks</string>
    <string name="action_gen">Ģenerēt</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Iestatījumi</string>
    <string name="action_save_image">Saglabāt rakstu</string>
    <string name="action_gen_next">Ģenerēt parasto</string>
    <string name="action_gen_next_inverse">Ģenerēt inverso</string>
    <string name="pref_title_color1">Raksta rūtiņu krāsa</string>
    <string name="pref_title_color0">Tukšo rūtiņu krāsa</string>
    <string name="pref_title_gen_repeat">Rindu atkārtošana</string>
    <string name="pref_dialog_color_select">Izvēlēties krāsu</string>
    <string name="pref_dialog_method_select">Izvēlēties metodi</string>
    <string name="pref_default_color1">#0000FF</string>
    <string name="pref_default_color0">#FFFFFF</string>
    <string name="pref_default_repeat_value">MIDDLE</string>
</resources>
